# ChessEngine

./: .gitignore  CMakeLists.txt  ComparePerftResults.py  ComprePerftResults.py  Doxyfile  FindPerftDiff.py  README.md  main.cpp  output_master.txt
.github/workflows/: build.yml  perft_pos0.yml  perft_pos2.yml  perft_pos3.yml  perft_pos4.yml  perft_test.yml
doc/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  index.html  menudata.js
doc/html/search/: searchdata.js
doc/latex/: refman.tex
include/: Board.hpp  Constants.hpp  Engine.hpp  Generator.hpp  Move.hpp  Renderer.hpp  Test.hpp
python_bindings/: py_generator.cpp
scripts/: EvaluatePositions.py  FindPerftDiff.py  ParseMasterGames.py  PositionParser.py  TrainRL.ipynb
src/: Board.cpp  CMakeLists.txt  Engine.cpp  Game.cpp  Game.hpp  Generator.cpp  Renderer.cpp  Test.cpp  main.cpp
src/data/: blackKing.txt  blackKnight.txt  blackPawns.txt  blackQueen.txt  whiteBishop.txt  whiteKing.txt  whitePawns.txt  whiteQueen.txt
src/include/: Board.hpp  Constants.hpp  Engine.hpp  Game.hpp  Generator.hpp  Move.hpp  Renderer.hpp  Test.hpp
src/src/: Board.cpp  Engine.cpp  Game.cpp  Generator.cpp  Renderer.cpp  Test.cpp
